tugas pemrograman website

--- a/pach.html
+++ b/pach.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
 </head>
 <body>
 <section id ="kontainer" style="display: flex; height: 100vh;"> 
-    <section id = "navigation" style="background-color: rgb(87, 87, 158); width: 15%;"> 
+    <section id = "navigation" style="background-color: #fefefe; width: 15%;"> 
         <h1>connect</h1>
         <div style="display: flex;flex-direction: column; gap: 28p;"> 
             <button>user</button>
@@ -17,13 +15,85 @@
    
     </section>
 
-    <section id = "content" style="background-color: aqua; width: 85%;" >
-        <input type="text" placeholder="cari nama">
-    </section>
+    <section id="content" style=" width: 85%; margin: 1px;">
+        <div style="display: flex; justify-content: center;">
+            <input type="search" placeholder="cari user" style="width: 1150px; height: 33px;">
+        </div>
+        <html lang="en">
+    <section>
+        <div style=
+    "color: black;
+    display: flex;
+    flex-direction: column;
+    min-height: 120px;
+    width: 1000px;
+    border-radius: 5px;
+    gap: 11px;
+    justify-content: flex-start;
+    margin-left: 30px;
+    margin-top: 25px;
+    border:black 1px solid;">
+          <h2 style="margin-bottom: 0; margin-left: 15px;">Rahmat Saudi Al Fathir As</h2>
+          <p style="margin-top: -15px; margin-left: 17px;">rahmatsaudi@universitasmulia.ac.id</p>
+          <h1 style="direction: rtl; margin-top: -43px; margin-right: 15px;">Aktif</h1>
+          <p style="width: 50px; text-align: center; color: white; background-color:black ; margin-top: -15px; margin-left: 16px; border-radius: 5px;">admin</p>
+          <p style="width: 62px; text-align: center; color: white; background-color: black; margin-top: -47px; margin-left: 70px; border-radius: 5px;">employee</p>
+        </div>
+        <div style=
+    "color: black;
+    display: flex;
+    flex-direction: column;
+    min-height: 120px;
+    width: 1000px;
+    border-radius: 5px;
+    gap: 11px;
+    justify-content: flex-start;
+    margin-left: 30px;
+    margin-top: 25px;
+    border:black 1px solid;">
+          <h2 style="margin-bottom: 0; margin-left: 15px;">Lintang</h2>
+          <p style="margin-top: -15px; margin-left: 17px;">Lintang@universitasmulia.ac.id</p>
+          <h1 style="direction: rtl; margin-top: -43px; margin-right: 15px;">Aktif</h1>
+          <p style="width: 50px; text-align: center; color: white; background-color:black ; margin-top: -15px; margin-left: 16px; border-radius: 5px;">admin</p>
+          <p style="width: 62px; text-align: center; color: white; background-color: black; margin-top: -47px; margin-left: 70px; border-radius: 5px;">employee</p>
+        </div>
+        <div style=
+    "color: black;
+    display: flex;
+    flex-direction: column;
+    min-height: 120px;
+    width: 1000px;
+    border-radius: 5px;
+    gap: 11px;
+    justify-content: flex-start;
+    margin-left: 30px;
+    margin-top: 25px;
+    border:black 1px solid;">
+          <h2 style="margin-bottom: 0; margin-left: 15px;">Shafira</h2>
+          <p style="margin-top: -15px; margin-left: 17px;">Shafira@universitasmulia.ac.id</p>
+          <h1 style="direction: rtl; margin-top: -43px; margin-right: 15px;">Aktif</h1>
+          <p style="width: 50px; text-align: center; color: white; background-color:black ; margin-top: -15px; margin-left: 16px; border-radius: 5px;">admin</p>
+          <p style="width: 62px; text-align: center; color: white; background-color: black; margin-top: -47px; margin-left: 70px; border-radius: 5px;">employee</p>
+        </div>
+        <div style=
+    "color: black;
+    display: flex;
+    flex-direction: column;
+    min-height: 120px;
+    width: 1000px;
+    border-radius: 5px;
+    gap: 11px;
+    justify-content: flex-start;
+    margin-left: 30px;
+    margin-top: 25px;
+    border:black 1px solid;">
+          <h2 style="margin-bottom: 0; margin-left: 15px;">lebah ganteng</h2>
+          <p style="margin-top: -15px; margin-left: 17px;">lebahganteng@universitasmulia.ac.id</p>
+          <h1 style="direction: rtl; margin-top: -43px; margin-right: 15px;">Aktif</h1>
+          <p style="width: 50px; text-align: center; color: white; background-color:black ; margin-top: -15px; margin-left: 16px; border-radius: 5px;">admin</p>
+          <p style="width: 62px; text-align: center; color: white; background-color: black; margin-top: -47px; margin-left: 70px; border-radius: 5px;">employee</p>
+        </div>
+<head>
     
-
-</section>
-
-
 </body>
 </html>
